# serializer version: 1
# name: test_e2e_sample_project[fullstack_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 0,
      'passed_tests': list([
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[go_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 2,
      'passed_tests': list([
        'TestAdd',
        'TestMultiply',
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'model': '',
    'node_test_summary': None,
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[node_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': dict({
      'failed_count': 0,
      'failed_tests': list([
      ]),
      'passed_count': 0,
      'passed_tests': list([
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'pytest_summary': None,
    'success': True,
  })
# ---
# name: test_e2e_sample_project[python_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': None,
    'success': False,
  })
# ---
# name: test_e2e_sample_project[python_with_failing_test]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': dict({
      'failed_count': 1,
      'failed_tests': list([
        'tests/test_app.py::test_impossible',
      ]),
      'passed_count': 2,
      'passed_tests': list([
        'tests/test_app.py::test_add',
        'tests/test_app.py::test_multiply',
      ]),
      'skipped_count': 0,
      'skipped_tests': list([
      ]),
    }),
    'success': False,
  })
# ---
# name: test_e2e_sample_project[rust_project]
  dict({
    'agent_exit_code': 0,
    'cargo_test_summary': None,
    'go_test_summary': None,
    'model': '',
    'node_test_summary': None,
    'pytest_summary': None,
    'success': False,
  })
# ---
